--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -6,10 +6,10 @@
 					<div class="col-md-3 widget">
 						<h3 class="widget-title">Contact</h3>
 						<div class="widget-body">
-							<p>+234 23 9873237<br>
+							<p>+237 655 271 506<br>
 								<a href="mailto:#">some.email@somewhere.com</a><br>
 								<br>
-								234 Hidden Pond Road, Ashland City, TN 37015
+								Yaounde Cameroun
 							</p>	
 						</div>
 					</div>
@@ -27,10 +27,10 @@
 					</div>
 
 					<div class="col-md-6 widget">
-						<h3 class="widget-title">Text widget</h3>
+						<h3 class="widget-title">AB COMPTA</h3>
 						<div class="widget-body">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, dolores, quibusdam architecto voluptatem amet fugiat nesciunt placeat provident cumque accusamus itaque voluptate modi quidem dolore optio velit hic iusto vero praesentium repellat commodi ad id expedita cupiditate repellendus possimus unde?</p>
-							<p>Eius consequatur nihil quibusdam! Laborum, rerum, quis, inventore ipsa autem repellat provident assumenda labore soluta minima alias temporibus facere distinctio quas adipisci nam sunt explicabo officia tenetur at ea quos doloribus dolorum voluptate reprehenderit architecto sint libero illo et hic.</p>
+							<p> Consulter AB COMPTA pour beneficier des logiciel puissant</p>
+							<p>Notre equipe d'expert vous attendent</p>
 						</div>
 					</div>
 				</div> <!-- /row of widgets -->
@@ -40,22 +40,12 @@
 		<div class="footer2">
 			<div class="container">
 				<div class="row g-3 align-items-center">
-					<div class="col-md-6 widget">
-						<div class="widget-body">
-							<p class="simplenav">
-								<a href="#">Home</a> | 
-								<a href="about.html">About</a> |
-								<a href="sidebar-right.html">Sidebar</a> |
-								<a href="contact.html">Contact</a> |
-								<b><a href="signup.html">Sign up</a></b>
-							</p>
-						</div>
-					</div>
+					
 
 					<div class="col-md-6 widget">
 						<div class="widget-body">
 							<p class="text-md-end">
-								Copyright &copy; 2014, Your name. Designed by <a href="http://gettemplate.com/" rel="designer">gettemplate</a> 
+								Production &copy;  {{ "now" | date("Y-m-d")}}</a> 
 							</p>
 						</div>
 					</div>
