--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block body %}
 <!DOCTYPE html>
@@ -14,12 +14,6 @@
 	<title>Home</title>
 
 	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
-
-	<!-- Bootstrap 5 CSS -->
-	{# <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"> #}
-	<!-- Font Awesome for icons -->
-	{# <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"> #}
-
 	
 </head>
 
@@ -33,11 +27,10 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-8 text-center">
-					<h1 class="lead">AWESOME, CUSTOMIZABLE, FREE</h1>
-					<p class="tagline">PROGRESSUS: free business bootstrap template by <a href="http://www.gettemplate.com/?utm_source=progressus&amp;utm_medium=template&amp;utm_campaign=progressus">GetTemplate</a></p>
+					<h1 class="lead">LOCATION, TRANSPORT ET VENTE DE SABLE</h1>
 					<p>
-						<a class="btn btn-secondary btn-lg" role="button">MORE INFO</a> 
-						<a class="btn btn-action btn-lg" role="button">DOWNLOAD NOW</a>
+						<a class="btn btn-secondary btn-lg" href="{{path('app_login')}}">COMMENCER</a> 
+						<a class="btn btn-action btn-lg" href="{{path('app_contact')}}">CONTACTER</a>
 					</p>
 				</div>
 			</div>
@@ -47,10 +40,12 @@
 
 	<!-- Intro -->
 	<div class="container text-center py-5">
-		<h2 class="thin">The best place to tell people why they are here</h2>
+		<h2 class="thin">Logiciel de Gestion Intégré pour le Sable et la Logistique</h2>
 		<p class="text-muted">
-			The difference between involvement and commitment is like an eggs-and-ham breakfast:<br> 
-			the chicken was involved; the pig was committed.
+			Ce logiciel est une solution ERP simplifiée conçue spécifiquement pour optimiser<br>
+			le flux de travail et la rentabilité des entreprises opérant dans l'extraction,<br>
+			la logistique et la distribution de matériaux (sable, gravier, agrégats, etc.).<br>
+			Il assure une traçabilité complète de la carrière au chantier.<br>
 		</p>
 	</div>
 	<!-- /Intro-->
@@ -58,39 +53,59 @@
 	<!-- Highlights -->
 	<div class="bg-light py-5 top-space">
 		<div class="container">
-			<h3 class="text-center thin mb-5">Reasons to use this template</h3>
+			<h3 class="text-center thin mb-5">Cœur de l'activité</h3>
 			
 			<div class="row g-4">
 				<div class="col-md-3 col-sm-6 highlight">
 					<div class="h-caption">
-						<h4><i class="fas fa-cogs fa-2x mb-3"></i>Bootstrap-powered</h4>
+						<h4><i class="fas fa-cogs fa-2x mb-3"></i>Module Transport et Logistique</h4>
 					</div>
 					<div class="h-body text-center">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aliquid adipisci aspernatur. Soluta quisquam dignissimos earum quasi voluptate. Amet, dignissimos, tenetur vitae dolor quam iusto assumenda hic reprehenderit?</p>
+						<p>
+						Gestion des Tournées et Flotte<br>
+						Suivi GPS/Géolocalisation<br>
+						Bons de Livraison Numériques (e-BL)<br>
+						Maintenance Préventive<br>
+						</p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 highlight">
 					<div class="h-caption">
-						<h4><i class="fas fa-bolt fa-2x mb-3"></i>Fat-free</h4>
+						<h4><i class="fas fa-bolt fa-2x mb-3"></i>Module Vente et Stock</h4>
 					</div>
 					<div class="h-body text-center">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, commodi, sequi quis ad fugit omnis cumque a libero error nesciunt molestiae repellat quos perferendis numquam quibusdam rerum repellendus laboriosam reprehenderit! </p>
+						<p>
+						Gestion des Stocks de Sable<br>
+						Tarification Dynamique<br>
+						Facturation Automatisée<br>
+						Gestion des Clients/Fournisseurs<br>
+						</p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 highlight">
 					<div class="h-caption">
-						<h4><i class="fas fa-heart fa-2x mb-3"></i>Creative Commons</h4>
+						<h4><i class="fas fa-heart fa-2x mb-3"></i>Module Location d'Engins</h4>
 					</div>
 					<div class="h-body text-center">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, vitae, perferendis, perspiciatis nobis voluptate quod illum soluta minima ipsam ratione quia numquam eveniet eum reprehenderit dolorem dicta nesciunt corporis?</p>
+						<p>
+						Calendrier de Réservation<br>
+						Calcul des Frais de Location<br>
+						Suivi des Durées d'Utilisation<br>
+						Gestion des Contrats<br>
+						</p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 highlight">
 					<div class="h-caption">
-						<h4><i class="fas fa-smile fa-2x mb-3"></i>Author's support</h4>
+						<h4><i class="fas fa-smile fa-2x mb-3"></i>Bénéfices Globaux</h4>
 					</div>
 					<div class="h-body text-center">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, excepturi, maiores, dolorem quasi reprehenderit illo accusamus nulla minima repudiandae quas ducimus reiciendis odio sequi atque temporibus facere corporis eos expedita? </p>
+						<p> 
+						Rentabilité<br>
+						Traçabilité<br>
+						Efficacité<br>
+						Conformité<br>
+						</p>
 					</div>
 				</div>
 			</div> <!-- /row  -->
@@ -98,56 +113,17 @@
 	</div>
 	<!-- /Highlights -->
 
-	<!-- container -->
-	<div class="container py-5">
-
-		<h2 class="text-center top-space">Frequently Asked Questions</h2>
-		<br>
-
-		<div class="row g-4">
-			<div class="col-sm-6">
-				<h3>Which code editor would you recommend?</h3>
-				<p>I'd highly recommend you <a href="http://www.sublimetext.com/">Sublime Text</a> - a free to try text editor which I'm using daily. Awesome tool!</p>
-			</div>
-			<div class="col-sm-6">
-				<h3>Nice header. Where do I find more images like that one?</h3>
-				<p>
-					Well, there are thousands of stock art galleries, but personally, 
-					I prefer to use photos from these sites: <a href="http://unsplash.com">Unsplash.com</a> 
-					and <a href="http://www.flickr.com/creativecommons/by-2.0/tags/">Flickr - Creative Commons</a></p>
-			</div>
-		</div> <!-- /row -->
-
-		<div class="row g-4 mt-0">
-			<div class="col-sm-6">
-				<h3>Can I use it to build a site for my client?</h3>
-				<p>
-					Yes, you can. You may use this template for any purpose, just don't forget about the <a href="http://creativecommons.org/licenses/by/3.0/">license</a>, 
-					which says: "You must give appropriate credit", i.e. you must provide the name of the creator and a link to the original template in your work. 
-				</p>
-			</div>
-			<div class="col-sm-6">
-				<h3>Can you customize this template for me?</h3>
-				<p>Yes, I can. Please drop me a line to sergey-at-pozhilov.com and describe your needs in details. Please note, my services are not cheap.</p>
-			</div>
-		</div> <!-- /row -->
-
-		<div class="bg-light p-5 rounded top-space mt-5">
-			<h4>Dicta, nostrum nemo soluta sapiente sit dolor quae voluptas quidem doloribus recusandae facere magni ullam suscipit sunt atque rerum eaque iusto facilis esse nam veniam incidunt officia perspiciatis at voluptatibus. Libero, aliquid illum possimus numquam fuga.</h4>
-     		<p class="text-end mt-4"><a class="btn btn-primary btn-lg">Learn more »</a></p>
-  		</div>
-
-	</div>	<!-- /container -->
+	<!-- /container -->
 	
 	<!-- Social links -->
 	<section id="social">
 		<div class="container">
 			<div class="d-flex justify-content-center">
 				<!-- Social sharing buttons - you can replace these with actual Bootstrap buttons or other sharing solutions -->
-				<button class="btn btn-outline-primary me-2"><i class="fab fa-facebook-f me-1"></i> Share</button>
-				<button class="btn btn-outline-info me-2"><i class="fab fa-twitter me-1"></i> Tweet</button>
-				<button class="btn btn-outline-primary me-2"><i class="fab fa-linkedin-in me-1"></i> Share</button>
-				<button class="btn btn-outline-danger"><i class="fab fa-google-plus-g me-1"></i> +1</button>
+				<a class="btn btn-outline-primary me-2" href="https://www.facebook.com"><i class="fab fa-facebook-f me-1"></i> Share</a>
+				<a class="btn btn-outline-info me-2" href="https://x.com"><i class="fab fa-twitter me-1"></i> Tweet</a>
+				<a class="btn btn-outline-primary me-2" href="https://linkedin.com"><i class="fab fa-linkedin-in me-1"></i> linkedin</a>
+				<a class="btn btn-outline-danger" href="https://www.google.com/intl/fr/account/about"><i class="fab fa-google-plus-g me-1"></i> +1</a>
 			</div>
 		</div>
 	</section>
