--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark headroom">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">
-				<img src="assets/images/logo.png" alt="Progressus HTML5 template" height="30">
+			<a class="navbar-brand" href="https://skyblue-spoonbill-176458.hostingersite.com">
+				AB COMPTA
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
 				<span class="navbar-toggler-icon"></span>
