integration des fichier de graphe et non fonctionnel

--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -389,22 +389,11 @@
     <!-- Logout Modal-->
 
     <!-- Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin-2.min.js"></script>
-
-    <!-- Page level plugins -->
-    <script src="vendor/chart.js/Chart.min.js"></script>
 
     <!-- Page level custom scripts -->
-    <script src="js/demo/chart-area-semaine.js"></script>
-    <script src="js/demo/chart-pie-semain.js"></script>
-    <script src="js/demo/chart-bar-semain.js"></script>
+    <script src="{{asset('js/graphe/bar.js')}}"></script>
+    <script src="{{asset('js/graphe/cercle.js')}}"></script>
+    <script src="{{asset('js/graphe/courbe.js')}}"></script>
     
 </body>
 </html>
