permetrer le modification des role de l'utilisateur et des donne

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -44,6 +44,12 @@
                                         label: ' Email Address *'
                                     }) }}
                                 </div>
+                                <div class="mb-3">
+                                    
+                                    {{ form_row(registrationForm.telephone, {
+                                        label: 'telephone *'
+                                    }) }}
+                                </div>
 
                                 <div class="row mb-3">
                                     <div class="col-sm-6">
