creation des role utilisateur

--- a/templates/agence/index.html.twig
+++ b/templates/agence/index.html.twig
@@ -32,7 +32,7 @@
                 <!-- Nested Row within Card Body -->
                 <div class="row">
                     <div class="col-lg-2 d-none d-lg-block bg-register-image">
-                        {% include "navbar.html.twig" %}
+                        {% include "topbar.html.twig" %}
                     </div>
                     <div class="col-lg-10">
                         <div class="p-5">
