--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -16,7 +16,7 @@
 
 <body>
 	<header id="head" class="secondary">
-    {% include "navbar.html.twig" %} 
+    {% include "topbar.html.twig" %} 
     </header>
 
     <!-- container -->
