--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -17,11 +17,6 @@
     <title>GESTION DE STOCK</title>
 
     <!-- Custom fonts for this template-->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    
-
-    <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.min.css" rel="stylesheet">
     <style>
         .start{
             color: gold;
@@ -64,7 +59,7 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
-        {% include "verticalbar.html.twig" %}
+        {% include "navbar.html.twig" %}
         <!-- End of Sidebar -->
 
         <!-- Content Wrapper -->
@@ -74,7 +69,7 @@
             <div id="content">
 
                 <!-- Topbar -->
-                  {% include "navbar.html.twig" %} 
+                  {% include "topbar.html.twig" %} 
                 <!-- End of Topbar -->
 
                 <!-- Begin Page Content -->
