--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <header id="head" class="secondary">
-    {% include "navbar.html.twig" %}
+    {% include "topbar.html.twig" %}
     </header>
     
 <!-- container -->
