--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -70,10 +70,10 @@
                                         {% for roles in user.roles %}
                                             <option value="{{roles}}"> {{roles}}</option>
                                         {% endfor %}
-                                            <option value="ROLE_DIRECTEUR_GENERALE">Directeur Général</option>
+                                            <option value="ROLE_DIRECTEUR_GENERAL">Directeur Général</option>
                                             <option value="ROLE_COMPTABLE">Comptable</option>
                                             <option value="ROLE_GESTIONNAIRE_LOGISTIQUE">Gestionnaire logistique </option>
-                                            <option value="ROLE_CASISSIER">Caissier ou agent terrain  </option>
+                                            <option value="ROLE_CAISSIER">Caissier ou agent terrain  </option>
                                             <option value="ROLE_USER"> Lecture </option>
                                         </select>
                                     </div>
