--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -32,7 +32,7 @@
 
 <body>
 	<!-- Fixed navbar -->
-	{% include "navbar.html.twig" %}
+	{% include "topbar.html.twig" %}
 	<!-- /.navbar -->
 
 	<header id="head" class="secondary"></header>
