--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -19,7 +19,7 @@
 
 <body class="home">
 	<!-- Fixed navbar -->
-	{% include "navbar.html.twig" %}
+	{% include "topbar.html.twig" %}
 	<!-- /.navbar -->
 
 	<!-- Header -->
