--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -128,7 +128,7 @@
 		</div>
 	</section>
 	<!-- /social links -->	
-    {# {% include "footer.html.twig" %} #}
+    {% include "footer.html.twig" %}
 	<!-- Bootstrap 5 JavaScript -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 	<!-- Your custom JavaScript -->
