integration du topbar a la page

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -19,7 +19,7 @@
 
 <body class="home">
 	<!-- Fixed navbar -->
-	{# {% include "topbar.html.twig" %} #}
+	{% include "topbar.html.twig" %}
 	<!-- /.navbar -->
 
 	<!-- Header -->
