--- a/templates/camion/index.html.twig
+++ b/templates/camion/index.html.twig
@@ -3,18 +3,116 @@
 {% block title %}Hello CamionController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{% include "topbar.html.twig" %}
+<section class="vh-100 bg-image"
+  style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
+  <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+    <div class="container h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 ">
+          <div class="card" style="border-radius: 15px;">
+            <div class="card-body p-5">
+              <h2 class="text-uppercase text-center mb-5">Enregistrer un camion</h2>
+              <div class="form-group row">
+                <div class="col-sm-2">
+                    {% include "navbar.html.twig" %}
+                </div>
+                <div class="col-sm-10">
+                    {{form_start(form)}}
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+                <div data-mdb-input-init class="form-outline mb-4">
+                    <label class="form-label" for="form3Example1cg">Immatriculation</label>
+                    {{form_widget(form.immatriculation)}}
+                </div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'D:/automobile/src/Controller/CamionController.php'|file_link(0) }}">src/Controller/CamionController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/automobile/templates/camion/index.html.twig'|file_link(0) }}">templates/camion/index.html.twig</a></code></li>
-    </ul>
-</div>
+                <div data-mdb-input-init class="form-outline mb-4">
+                    <label class="form-label" for="form3Example3cg">Marque</label>
+                    {{form_widget(form.marque)}}
+                </div>
+
+                <div data-mdb-input-init class="form-outline mb-4">
+                    <label class="form-label" for="form3Example4cg">Modele</label>
+                    {{form_widget(form.modele)}}
+                  
+                </div>
+
+                <div data-mdb-input-init class="form-outline mb-4">
+                    <label class="form-label" for="form3Example4cdg">Type</label>
+                    {{form_widget(form.type)}}
+                  
+                </div>
+
+                <div data-mdb-input-init class="form-outline mb-4">
+                    <label class="form-label" for="form2Example3g">Capacite </label>
+                  {{form_widget(form.capacite)}}
+                </div>
+
+                <div data-mdb-input-init class="form-outline mb-4">
+                    <label class="form-label" for="form2Example3g">Volume </label>
+                  {{form_widget(form.volume)}}
+                  
+                </div>
+
+                <div data-mdb-input-init class="form-outline mb-4">
+                    <label class="form-label" for="form2Example3g">Consommation de Carburant</label>
+                  {{form_widget(form.carburant)}}
+                </div>
+
+                <div data-mdb-input-init class="form-outline mb-4">
+                <label class="form-label" for="form2Example3g">Kilométrage Actuel</label>
+                  {{form_widget(form.kilometrage)}}
+                </div>
+
+                <div data-mdb-input-init class="form-outline mb-4">
+                <label class="form-label" for="form2Example3g">État</label>
+                  {{form_widget(form.etat)}}
+                  
+                </div>
+
+                <div data-mdb-input-init class="form-outline mb-4">
+                <label class="form-label" for="form2Example3g">Localisation Actuelle</label>
+                  {{form_widget(form.localisation)}}
+                  
+                </div>
+
+                <div data-mdb-input-init class="form-outline mb-4">
+                <label class="for-label" for="form2Example3g">Prix/Jour</label>
+                  {{form_widget(form.prix)}}
+                  
+                </div>
+
+                <div data-mdb-input-init class="form-outline mb-4">
+                <label class="form-label" for="form2Example3g">Prix/Jour</label>
+                  {{form_widget(form.createtAt)}}
+                  
+                </div>
+
+                <div class="d-flex justify-content-center">
+                  <button  type="submit" data-mdb-button-init
+                    data-mdb-ripple-init class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Enregistrer</button>
+                </div>
+
+                
+
+              {{ form_end(form)}}
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<script>
+// Utile si l'élément est chargé dynamiquement
+setTimeout(function() {
+    const sidebarToggle = document.getElementById('sidebarToggle');
+    if (sidebarToggle) {
+        sidebarToggle.click();
+    }
+}, 100); // Délai de 100ms // Délai de 100ms
+
+</script>
 {% endblock %}
