--- a/templates/camion/list.html.twig
+++ b/templates/camion/list.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Caisse{% endblock %}
+{% block title %}Camion{% endblock %}
 
 {% block body %}
 <!DOCTYPE html>
@@ -46,7 +46,7 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">Caisse</h1>
+                    <h1 class="h3 mb-2 text-gray-800">List Camion</h1>
                     <p class="mb-4">
 
                     <!-- DataTales Example -->
@@ -55,53 +55,20 @@
                         <div class="card-header py-3">
                             <div class="form-group row">
                                 <div class="col-sm-6 ">
-                                    <h6 class="m-0 font-weight-bold text-primary">Tables des Caisses</h6>
+                                    <h6 class="m-0 font-weight-bold text-primary">Table Camions</h6>
                                 </div>
                                 <div class="col-sm-2">
+                                    <a href="{{ path('app_home_dashboard', {'id': id}) }}" class="btn btn-primary">
                                     <i class="fa fa-home"></i>
-                                    <a href="#" class="btn btn-primary">Home</a> 
+                                    Home
+                                    </a> 
                                 </div>
                                 <div class="col-sm-2">
-                                    <i class="fa fa-plus"></i> 
-                                    <a href="#" class="btn btn-success"> Ajouter</a>
+                                    <a href="{{ path('app_camion')}}" class="btn btn-success">
+                                    <i class="fa fa-plus"></i>  Ajouter</a>
                                 </div>
                                     
                             </div>
-                        
-                            <form  action="#" method="post" class="user row" >
-                                <div class="row">
-                                    <p class="col-md-2" >
-                                        <input type="date" class="form-control form-control-user"
-                                        name="datedette" id="datedette" placeholder="quantite">
-                                    </p>
-                                    <p class="col-md-2" >
-                                        <input type="date" class="form-control form-control-user"
-                                        name="datedett2" id="datedett2" placeholder="quantite">
-                                    </p>
-                                    <p class="col-md-2" >
-                                        <input class="form-check-input" type="checkbox" id="OM" name="OM" value="OM">
-                                            <label class="form-check-label" id="OM">OM</label><br>
-                                        
-                                        <input class="form-check-input" type="checkbox" id="credit" name="credit" value="credit">
-                                            <label class="form-check-label" id="credit">crédit</label>
-                                    </p>
-
-                                    <p class="col-md-3" >
-                                        <input class="form-check-input" type="checkbox" id="cash" name="cash" value="cash">
-                                        <label class="form-check-label" id="cash">cash</label><br>
-
-                                        <input class="form-check-input" type="checkbox" id="vente" name="vente" value="vente">
-                                        <label class="form-check-label" id="vente">Total vente</label>
-                                    </p>
-
-                                <p class="col-md-3" >
-                                <input type="submit" class="btn btn-warning btn-user"  value="Afficher" >  
-                                <br>
-                                <label for="annee">Année recherche</label>
-                                    
-                                </p>  
-                                </div>
-                            </form>
                         </div>
                         
                         <div class="card-body">
@@ -111,9 +78,10 @@
                                        
                                         <tr>
                                             <th>id</th>
-                                            <th>Opération</th>
-                                            <th>Montant</th>
-                                            <th>Motif</th>
+                                            <th>Immatriculation</th>
+                                            <th>Marque</th>
+                                            <th>Modele</th>
+                                            <th>Type</th>
                                             <th>Date</th>
                                             <th>Opération</th>
                                         </tr>
@@ -121,24 +89,26 @@
                                     <tfoot>
                                         <tr>
                                             <th>id</th>
-                                            <th>Opération</th>
-                                            <th>Montant</th>
-                                            <th>Motif</th>
+                                            <th>Immatriculation</th>
+                                            <th>Marque</th>
+                                            <th>Modele</th>
+                                            <th>Type</th>
                                             <th>Date</th>
                                             <th>Opération1</th>
                                         </tr>
                                     </tfoot>
                                     <tbody>
-                                    {% for caisse in caisses %}
+                                    {% for camion in camions %}
                                         <tr>
-                                            <td>{{ caisse.id }}</td>
-                                            <td>{{ caisse.operation }}</td>
-                                            <td>{{ caisse.montant }}</td>
-                                            <td>{{ caisse.motif }}</td>
-                                            <td>{{ caisse.createAt | date('Y-m-d') }}</td>
+                                            <td>{{ camion.id }}</td>
+                                            <td>{{ camion.immatriculation }}</td>
+                                            <td>{{ camion.marque }}</td>
+                                            <td>{{ camion.modele }}</td>
+                                            <td>{{ camion.type }}</td>
+                                            <td>{{ camion.createtAt | date('Y-m-d') }}</td>
                                             <td>  
-                                            <a href='#' class='btn btn-primary'><i class='fas fa-pencil-alt'></i></a>
-                                            <a href='#' class='btn btn-danger'><i class='fas fa-trash-alt'></i></a>
+                                            <a href='{{path('app_camion_edit',{'id':camion.id})}}' class='btn btn-primary'><i class='fas fa-pencil-alt'></i></a>
+                                            <a href='{{path('app_camion_delete',{'id':camion.id})}}' class='btn btn-danger'><i class='fas fa-trash-alt'></i></a>
                                             </td>
                                         </tr>
                                     {% endfor %}
@@ -178,6 +148,8 @@
 
     <!-- Logout Modal-->
     
+
+    <!-- Bootstrap core JavaScript-->
     <script>
         function reload() {
             var annee = document.getElementById("annee").value;
