--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -115,6 +115,21 @@
         </div>
     </li>
 
+    <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#camion"
+            aria-expanded="true" aria-controls="camion">
+            <i class="fas fa-bus-alt"></i>
+            <span>Camion</span>
+        </a>
+        <div id="camion" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+            <div class="bg-white py-2 collapse-inner rounded">
+                <h6 class="collapse-header">Camion</h6>
+                <a class="collapse-item" href="{{ path('app_camion') }}">Ajouter Camion</a>
+                <a class="collapse-item" href="{{ path('produit_list') }}">Liste Camion</a>
+            </div>
+        </div>
+    </li>
+
     <!-- Fournisseur Section -->
     <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsefournisseur"
