--- a/templates/topbar.html.twig
+++ b/templates/topbar.html.twig
@@ -1,35 +1,108 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark headroom">
-		<div class="container">
-			<a class="navbar-brand" href="https://skyblue-spoonbill-176458.hostingersite.com">
-				AB COMPTA
-			</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav ms-auto">
-					<li class="nav-item">
-						<a class="nav-link active" href="{{path('app_home')}}">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="{{path('app_about')}}">About</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
-							More Pages
-						</a>
-						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="#">Agence</a></li>
-							<li><a class="dropdown-item active" href="#">Produit</a></li>
-						</ul>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="{{path('app_contact')}}">Contact</a>
-					</li>
-					<li class="nav-item">
-						<a class="btn btn-outline-light" href="{{path('app_login')}}">SIGN IN / SIGN UP</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
+    <div class="container">
+        <a class="navbar-brand fw-bold" href="{{ path('app_home') }}">
+            <i class="bi bi-calculator me-2"></i>
+            AB COMPTA
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link {{ app.request.get('_route') == 'app_home' ? 'active' : '' }}" href="{{ path('app_home') }}">
+                        <i class="bi bi-house me-1"></i>
+                        Home
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {{ app.request.get('_route') == 'app_about' ? 'active' : '' }}" href="{{ path('app_about') }}">
+                        <i class="bi bi-info-circle me-1"></i>
+                        About
+                    </a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="morePagesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="bi bi-layers me-1"></i>
+                        More Pages
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="morePagesDropdown">
+                        <li>
+                            <a class="dropdown-item" href="#">
+                                <i class="bi bi-building me-2"></i>
+                                Agence
+                            </a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="#">
+                                <i class="bi bi-box me-2"></i>
+                                Produit
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {{ app.request.get('_route') == 'app_contact' ? 'active' : '' }}" href="{{ path('app_contact') }}">
+                        <i class="bi bi-envelope me-1"></i>
+                        Contact
+                    </a>
+                </li>
+                
+                {# Menu utilisateur connecté/déconnecté #}
+                {% if app.user %}
+                    {# Utilisateur connecté #}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-person-circle me-1"></i>
+                            {{ app.user.prenom ?? app.user.email }}
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+                            <li>
+                                <a class="dropdown-item d-flex align-items-center" href="#">
+                                    <i class="bi bi-person me-2"></i>
+                                    Mon Profil
+                                </a>
+                            </li>
+                            {# <li>
+                                <a class="dropdown-item d-flex align-items-center" href="{{ path('app_dashboard') }}">
+                                    <i class="bi bi-speedometer2 me-2"></i>
+                                    Dashboard
+                                </a>
+                            </li> #}
+                            <li><hr class="dropdown-divider"></li>
+                            <li>
+                                <a class="dropdown-item d-flex align-items-center text-danger" href="{{ path('app_logout') }}">
+                                    <i class="bi bi-box-arrow-right me-2"></i>
+                                    Déconnexion
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                {% else %}
+                    {# Utilisateur non connecté #}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="authDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-person me-1"></i>
+                            Connexion
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="authDropdown">
+                            <li>
+                                <a class="dropdown-item d-flex align-items-center" href="{{ path('app_login') }}">
+                                    <i class="bi bi-box-arrow-in-right me-2"></i>
+                                    SIGN IN
+                                </a>
+                            </li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li>
+                                <a class="dropdown-item d-flex align-items-center" href="{{ path('app_register') }}">
+                                    <i class="bi bi-person-plus me-2"></i>
+                                    SIGN UP
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                {% endif %}
+            </ul>
+        </div>
+    </div>
+</nav>
