correcction du bug et integration des graph

--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -381,9 +381,9 @@
     <!-- Bootstrap core JavaScript-->
 
     <!-- Page level custom scripts -->
-    <script src="{{asset('js/graphe/bar.js')}}"></script>
-    <script src="{{asset('js/graphe/cercle.js')}}"></script>
-    <script src="{{asset('js/graphe/courbe.js')}}"></script>
+    <script src="{{asset('js/graphe/chart-area-semaine')}}"></script>
+    <script src="{{asset('js/graphe/chart-bar-semaine')}}"></script>
+    <script src="{{asset('js/graphe/chart-pie-semaine')}}"></script>
     
 </body>
 </html>
