--- a/templates/user/list.html.twig
+++ b/templates/user/list.html.twig
@@ -33,7 +33,7 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
-        {% include "verticalbar.html.twig" %}
+        {% include "navbar.html.twig" %}
         <!-- End of Sidebar -->
 
         <!-- Content Wrapper -->
@@ -43,7 +43,7 @@
             <div id="content">
 
                 <!-- Topbar -->
-                {% include "navbar.html.twig" %}
+                {% include "topbar.html.twig" %}
                 <!-- End of Topbar -->
 
                 <!-- Begin Page Content -->
