integration des graphe  de la home page  dashboad

--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -25,7 +25,7 @@
             display: none;
         }
     </style>
-
+     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body id="page-top">
@@ -378,12 +378,13 @@
 
     <!-- Logout Modal-->
 
-    <!-- Bootstrap core JavaScript-->
+    <!-- Bootstrap core JavaScript -->
 
     <!-- Page level custom scripts -->
-    <script src="{{asset('js/graphe/chart-area-semaine')}}"></script>
-    <script src="{{asset('js/graphe/chart-bar-semaine')}}"></script>
-    <script src="{{asset('js/graphe/chart-pie-semaine')}}"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="{{asset('js/graphe/chart-bar-semaine.js')}}"></script>
+    <script src="{{asset('js/graphe/chart-area-semaine.js')}}"></script>
+    <script src="{{asset('js/graphe/chart-pie-semaine.js')}}"></script>
     
 </body>
 </html>
