telechargement des acaht et integration de element de securite utilisateur

--- a/templates/employer/edit.html.twig
+++ b/templates/employer/edit.html.twig
@@ -51,7 +51,7 @@
                                         <h1 class="h4 text-gray-900 mb-4">Edition de l'employer</h1>
                                     </div>
                                     <div class="col-sm-2">
-                                        <a  href="{{ path('app_home_dashboardA', {'id': id}) }}" class="btn btn-primary btn-user btn-block"> Retour</a>
+                                        <a  href="{{ path('app_home_dashboard', {'id': id}) }}" class="btn btn-primary btn-user btn-block"> Retour</a>
                                     </div>
                                 </div>
                             </div>
