--- a/templates/achat/list.html.twig
+++ b/templates/achat/list.html.twig
@@ -19,16 +19,10 @@
     <title>gestion de stock</title>
 
     <!-- Custom fonts for this template -->
-    <link href="../../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link
-        href="../../https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="../../css/sb-admin-2.min.css" rel="stylesheet">
 
     <!-- Custom styles for this page -->
-    <link href="../../vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
+    
 
 </head>
 
@@ -64,24 +58,27 @@
                             <h6 class="m-0 font-weight-bold text-primary">Tableau des Achats</h6>
 
                             
-                            <form  action="../pdf/getvaleurachete.php" method="post" class="user row" >
+                            <form  action="{{path('achat_download')}}" method="post" class="user row" >
                                 <div class="row">
                                     <p class="col-md-2" >
                                         <input type="date" class="form-control form-control-user"
-                                        name="datedette" id="datedette" placeholder="quantite">
+                                        name="date1" id="date1" placeholder="quantite">
                                     </p>
                                     <p class="col-md-2" >
                                         <input type="date" class="form-control form-control-user"
-                                        name="datedett2" id="datedett2" placeholder="quantite">
+                                        name="date2" id="date2" placeholder="quantite">
                                     </p>
                                     <p class="col-md-3" >
-                                    <input type="text" class="form-control form-control-user" id="produitname"
-                                        name="produitname" placeholder="Nom produit" onkeyup="recherproduit()" required> 
-                                    <select id="produit"  name="produit"   class="form-control form-select" size="4" multiple aria-label="multiple select">   <!--  -->
+                                    <input type="text" class="form-control form-control-user" id="produitrecher"
+                                        name="produitrecher" placeholder="Nom produit" onkeyup="recherchduproduit()"> 
+                                    <select id="nomProduite"  name="nomProduite"   class="form-control form-select" size="4" multiple aria-label="multiple select">   <!--  -->
                                         <option value="ALL" selected>ALL</option>             
-                                             
+                                        {% for produit in produits %}
+                                            <option value="{{ produit.id }}">{{ produit.nom }}</option>
+                                        {% endfor %}   
                                     </select>
                                     </p>
+                                    
 
                                     <p class="col-md-2" >
                                         <input type="submit" class="btn btn-warning btn-user"  value="Afficher" >  
@@ -107,7 +104,6 @@
                                         <tr>
                                             <th>id</th>
                                             <th>Nom</th>
-                                            
                                             <th>Quantite</th>
                                             <th>Montant</th>
                                             <th>Date</th>
@@ -119,7 +115,6 @@
                                         <tr>
                                             <th>id</th>
                                             <th>Nom</th>
-                                            
                                             <th>Quantite</th>
                                             <th>Montant</th>
                                             <th>Date</th>
@@ -137,8 +132,8 @@
                                                 <td>{{ row.montant }}</td>
                                                 <td>{{ row.createdAT|date('Y-m-d') }}</td>  
                                                 <td>
-                                                    <a href='#' class='btn btn-primary' id='modification'><i class='fas fa-pencil-alt '></i></a>
-                                                    <a href='#' class='btn btn-danger' onclick='return confirm("Êtes-vous sûr de vouloir supprimer cet row ? si vous suprimer cet row elle sera supprimer du stock");' id='suppresioner'><i class='fas fa-trash-alt'></i></a>
+                                                    <a href='{{ path('app_achat_edit',{'id' :row.id}) }}' class='btn btn-primary' id='modification'><i class='fas fa-pencil-alt '></i></a>
+                                                    <a href='{{ path('achat_delete',{'id' : row.id})}}' class='btn btn-danger' onclick='return confirm("Êtes-vous sûr de vouloir supprimer cet row ? si vous suprimer cet row elle sera supprimer du stock");' id='suppresioner'><i class='fas fa-trash-alt'></i></a>
                                                     <a href='#' class='btn btn-primary' id='modification'><i class='far fa-file-image'></i></a>
                                                 </td>
                                             </tr> 
@@ -159,7 +154,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>vestion Production &copy; {{ "now"|date('m-d-y') }}</span>
+                        <span> Production &copy; {{ "now"|date('m-d-y') }}</span>
                     </div>
                 </div>
             </footer>
@@ -177,42 +172,10 @@
     </a>
 
     <!-- Logout Modal-->
-    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
-                </div>
-            </div>
-        </div>
-    </div>
+    <script src="{{asset('js/produit/recherche.js')}}"></script>
 
     <!-- Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin-2.min.js"></script>
-
-    <!-- Page level plugins -->
-    <script src="vendor/datatables/jquery.dataTables.min.js"></script>
-    <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
     
-    <script src="row.js"></script>
-    <!-- Page level custom scripts -->
-    <script src="js/demo/datatables-demo.js"></script>
    
 
 </body>
