--- a/templates/agence/choix.html.twig
+++ b/templates/agence/choix.html.twig
@@ -125,7 +125,7 @@
                         <div class="col-lg-12">
                             {% if app.user %}
                                 <div class="form-group row g-4">
-                                    {% if is_granted('ROLE_ADMIN_ADMIN') %}
+                                    {% if is_granted('ROLE_ADMIN_ADMIN') or is_granted('ROLE_DIRECTEUR_GENERALE') %}
                                         <!-- Panneau d'administration -->
                                         <div class="col-6">
                                             <div class="card shadow-sm border-0">
@@ -173,9 +173,6 @@
                                                         <a href="{{ path('app_home_dashboard', {'id': app.user.employer.agence.id}) }}" class="btn btn-primary px-4">
                                                             Activite ENC
                                                         </a>
-                                                        <a href="{{ path('app_home_dashboard', {'id': app.user.employer.agence.id}) }}" class="btn btn-outline-primary px-4">
-                                                            Cabinet
-                                                        </a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -188,7 +185,7 @@
                                         </div>
                                         {% endif %}
                                     
-                                    {% elseif is_granted('ROLE_EMPLOYER') or is_granted('ROLE_DIRECTEUR') or is_granted('ROLE_MANAGER') or is_granted('ROLE_COMPTABLE') or is_granted('ROLE_SECRETAIRE') %}
+                                    {% elseif is_granted('ROLE_EMPLOYER')  or is_granted('ROLE_MANAGER') or is_granted('ROLE_CAISSIER') or is_granted('ROLE_COMPTABLE') or is_granted('ROLE_SECRETAIRE') %}
                                         <!-- Interface employé avec accès aux agences -->
                                         {% for agences in agence %}
                                         <div class="col-md-6 col-lg-4">
